src/pages/fr/v1.23.0/configuration/proxy-settings.mdx
---
title: "Paramètres du proxy"
metaTitle: "Paramètres du proxy"
metaDescription: "Paramètres pour exécuter OpenReplay derrière un proxy tel que NGINX ou Apache2."
---

## Héberger OpenReplay avec d'autres applications à l'aide d'un proxy inverse

Lorsqu'OpenReplay s'exécute sur une machine, il utilise le port 80/443 pour exposer l'application. Mais lorsque vous utilisez un proxy inverse, OpenReplay peut être configuré pour utiliser un autre port afin d'accéder à l'application. Voici les étapes pour le faire :

1. Modifiez le fichier de configuration :

```bash
openreplay -e
```

2. Modifiez la section de configuration de nginx :

```yaml
ingress-nginx: &ingress-nginx
  controller:
	...
	...
    service:
      externalTrafficPolicy: "Local"
      ports:
        http: 880   # Change this port for http
        https: 8443 # Change this port for https
```
3. Enregistrez et quittez la configuration à l'aide de `:wq` afin qu'OpenReplay puisse recharger la configuration.

Votre proxy inverse peut ensuite être configuré. Reportez-vous aux sections ci-dessous pour le faire.

### Paramètres NGINX

Assurez-vous que votre proxy envoie les en-têtes `X-Forwarded-For` et `X-Forwarded-Proto`. SSL doit également être activé pour qu'OpenReplay fonctionne. Le reste de la configuration devrait ressembler à ceci :

```nginx
location / {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header Host $http_host;
        proxy_redirect off;
        proxy_pass http://1.2.3.4:880; # replace with OpenReplay instance IP
    }
```

### Paramètres Apache2

Assurez-vous que les modules `proxy`, `proxy_http` et `proxy_html` sont activés. SSL doit aussi être configuré, le reste des paramètres devrait être semblable à ceci :

```
<VirtualHost *:443>
    ProxyPass / http://1.2.3.4:880 <!-- replace with instance IP -->
    RequestHeader set X-Forwarded-Proto expr=%{REQUEST_SCHEME}
    # SSL + other config here
</VirtualHost>
```

## Points de terminaison publics

Si vous protégez votre instance OpenReplay avec un proxy, assurez-vous que les points de terminaison ci-dessous sont accessibles publiquement pour qu'OpenReplay fonctionne correctement.

| Point de terminaison | Description |
|----------|-------------|
| /ingest | Pour capturer les événements et les enregistrements |
| /api | Pour récupérer et gérer les données utilisateur |
| /assist | Pour les vidéos/appels en direct avec les utilisateurs finaux (WebRTC) |
| /ws-assist | Pour les relectures de session en direct avec les utilisateurs finaux |
| /static/openreplay.js | Code JavaScript qui charge OpenReplay |

## Des questions ?

Si vous avez des questions sur ce processus, n'hésitez pas à nous contacter sur notre [Slack](https://slack.openreplay.com) ou à consulter notre [Forum](https://forum.openreplay.com).
